homeworks/kuber-1.5/deploy-frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-http

---
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: nginx
  ports:
  - name: frontend-http
    protocol: TCP
    port: 80
    targetPort: nginx-http
