homeworks/kuber-1.5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: test.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
             name: service-front
             port:
               number: 80
        - pathType: Prefix
          path: /api
          backend:
            service:
             name: service-back
             port:
               number: 80
